--- a/projects/batch-jobs/pyproject.toml
+++ b/projects/batch-jobs/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "batch_jobs"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 pyspark = "^3.4.0"
+pytest = "^7.3.2"
 
 
 [build-system]
