--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,16 @@ services:
     ports:
       - "4566:4566"
     volumes:
-      - ./compose:/etc/localstack/init/ready.d
+      - ./compose/localstack:/etc/localstack/init/ready.d
       - ./datasets:/datasets
+
+  postgres:
+    image: postgres:15.3
+    environment:
+      - POSTGRES_DB=data_warehouse
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./compose/postgres:/docker-entrypoint-initdb.d
