--- a/compose/airflow/Dockerfile
+++ b/compose/airflow/Dockerfile
@@ -8,7 +8,9 @@ ARG AIRFLOW_VERSION=2.6.2
 ARG CONSTRAINT_URL="https://raw.githubusercontent.com/apache/airflow/constraints-${AIRFLOW_VERSION}/constraints-${PYTHON_VERSION}.txt"
 
 RUN pip install "apache-airflow==${AIRFLOW_VERSION}" --constraint "${CONSTRAINT_URL}"
+RUN pip install apache-airflow-providers-docker
 
 COPY ./entrypoint.sh /entrypoint.sh
+COPY dags /root/airflow/dags
 
 ENTRYPOINT  [ "./entrypoint.sh" ]
