--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       retries: 5
       start_period: 5s
 
+  # Airflow metadata storage
   postgres_airflow:
     image: postgres:15.3
     environment:
@@ -54,7 +55,7 @@ services:
       retries: 5
       start_period: 5s
 
-  # Task orchestration
+  # Airflow for task orchestration
   airflow:
     build:
       context: ./projects/airflow
