Updated order of Docker commands so the whole image does not have to be rebuilt after code changes.

--- a/projects/batch-jobs/Dockerfile
+++ b/projects/batch-jobs/Dockerfile
@@ -1,21 +1,22 @@
 FROM python:3.10-bookworm
 
-COPY . app
-
-# install Poetry
+# installs Poetry
 ENV POETRY_HOME="/opt/poetry"
 ENV PATH="$POETRY_HOME/bin:$PATH"
 RUN curl -sSL https://install.python-poetry.org | python3 -
 
-# install Java 8 for Spark
+# installs Java 8 for Spark
 RUN mkdir -p /etc/apt/keyrings
 RUN wget -O - https://packages.adoptium.net/artifactory/api/gpg/key/public | tee /etc/apt/keyrings/adoptium.asc
 RUN echo "deb [signed-by=/etc/apt/keyrings/adoptium.asc] https://packages.adoptium.net/artifactory/deb $(awk -F= '/^VERSION_CODENAME/{print$2}' /etc/os-release) main" | tee /etc/apt/sources.list.d/adoptium.list
 RUN apt update
 RUN apt install temurin-8-jre -y
 
-# install the project's modules
+# copies the project
+COPY . app
 WORKDIR app
+
+# installs the project's modules including Spark
 RUN poetry config virtualenvs.create false
 RUN poetry install
 
