Listing dependencies on requirements.txt file enabling sources and docs during development.

--- a/projects/airflow/Dockerfile
+++ b/projects/airflow/Dockerfile
@@ -1,6 +1,7 @@
 FROM apache/airflow:2.6.2
 
-RUN pip install "apache-airflow==${AIRFLOW_VERSION}" --no-cache-dir apache-airflow-providers-docker==3.7.0
+COPY requirements.txt requirements.txt
+RUN pip install -r requirements.txt
 
 COPY ./entrypoint.sh /entrypoint.sh
 COPY dags /opt/airflow/dags
