Airflow DAGs no longer need to be manually unpaused upon loading.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,7 @@ services:
       - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql://postgres:password@postgres_airflow:5432/airflow
       - AIRFLOW__CORE__EXECUTOR=LocalExecutor
       - AIRFLOW__CORE__PARALLELISM=8
+      - AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION=False
     ports:
       - "8080:8080"
     healthcheck:
