--- a/projects/batch-jobs/pyproject.toml
+++ b/projects/batch-jobs/pyproject.toml
@@ -10,8 +10,10 @@ packages = [{include = "batch_jobs"}]
 python = "^3.10"
 pyspark = "^3.4.0"
 psycopg2-binary = "^2.9.6"
-pytest = "^7.3.2"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.0"
 
 [build-system]
 requires = ["poetry-core"]
