--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,36 @@ services:
       retries: 5
       start_period: 5s
 
+  # Hive metastore storage
+  postgres-hive-metastore:
+    image: postgres:15.3
+    environment:
+      - POSTGRES_DB=hive
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
+    ports:
+      - "5452:5432"
+    healthcheck:
+      test: [ "CMD", "pg_isready", "-U", "postgres" ]
+      interval: 10s
+      retries: 5
+      start_period: 5s
+
+  # Hive metastore for schema definition enabling Trino to query S3
+  hive-metastore:
+    build:
+      context: ./projects/hive-metastore
+      dockerfile: Dockerfile
+    depends_on:
+      - postgres-hive-metastore
+    ports:
+      - "9083:9083"
+    healthcheck:
+      test: [ "CMD", "hive", "--help" ]
+      interval: 10s
+      retries: 5
+      start_period: 5s
+
   # Network debugging
   network-multitool:
     image: praqma/network-multitool:latest
