--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -119,6 +119,22 @@ services:
       retries: 5
       start_period: 5s
 
+  # Trino (PrestoSQL) query engine for multiple data-sources
+  trino:
+    image: trinodb/trino:420
+    ports:
+      - "8081:8080"
+    depends_on:
+      - localstack
+      - hive-metastore
+    volumes:
+      - ./compose/trino:/etc/trino
+    healthcheck:
+      test: [ "CMD", "trino", "--version" ]
+      interval: 10s
+      retries: 5
+      start_period: 5s
+
   # Network debugging
   network-multitool:
     image: praqma/network-multitool:latest
