--- a/compose/trino/config.properties
+++ b/compose/trino/config.properties
@@ -3,5 +3,6 @@ coordinator=true
 #single node install config
 node-scheduler.include-coordinator=true
 http-server.http.port=8080
+http-server.authentication.allow-insecure-over-http=true
 discovery-server.enabled=true
 discovery.uri=http://trino:8080
